{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 1059,
  "lineage": "61dbc711-06af-c5dd-4496-5fb89f269207",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "gcp-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-05-26T03:45:54.256-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/raghupothula/global/firewalls/gcp-egress",
            "log_config": [],
            "name": "gcp-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/raghupothula/global/networks/gcp-network-02",
            "priority": 2,
            "project": "raghupothula",
            "self_link": "https://www.googleapis.com/compute/v1/projects/raghupothula/global/firewalls/gcp-egress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.gcp-network-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "gcp-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "90"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-05-26T03:45:54.382-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/raghupothula/global/firewalls/gcp-ingress",
            "log_config": [],
            "name": "gcp-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/raghupothula/global/networks/gcp-network-02",
            "priority": 1,
            "project": "raghupothula",
            "self_link": "https://www.googleapis.com/compute/v1/projects/raghupothula/global/firewalls/gcp-ingress",
            "source_ranges": [
              "0.0.0.0/0",
              "104.132.250.74/32"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.gcp-network-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "on-prem-firewall2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "90"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-05-26T03:46:05.278-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/raghupothula/global/firewalls/on-prem-01-inbound",
            "log_config": [],
            "name": "on-prem-01-inbound",
            "network": "https://www.googleapis.com/compute/v1/projects/raghupothula/global/networks/onprem-network-01",
            "priority": 1,
            "project": "raghupothula",
            "self_link": "https://www.googleapis.com/compute/v1/projects/raghupothula/global/firewalls/on-prem-01-inbound",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.onprem-network-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "onprem-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-05-26T03:45:54.357-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/raghupothula/global/firewalls/on-prem-01-outbound",
            "log_config": [],
            "name": "on-prem-01-outbound",
            "network": "https://www.googleapis.com/compute/v1/projects/raghupothula/global/networks/onprem-network-01",
            "priority": 2,
            "project": "raghupothula",
            "self_link": "https://www.googleapis.com/compute/v1/projects/raghupothula/global/firewalls/on-prem-01-outbound",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.onprem-network-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "gcp-instance-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250513",
                    "labels": {
                      "vpn-instance": "gcp"
                    },
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/raghupothula/zones/us-central1-a/disks/gcp-instance-01"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/raghupothula/zones/us-central1-a/instances/gcp-instance-01",
            "instance_id": "5407163236574951576",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-2",
            "metadata_fingerprint": "-7Fq8U338Hg=",
            "name": "gcp-instance-01",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/raghupothula/global/networks/gcp-network-02",
                "network_ip": "10.10.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/raghupothula/regions/us-central1/subnetworks/sn-gcp-uscentral1",
                "subnetwork_project": "raghupothula"
              }
            ],
            "project": "raghupothula",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/raghupothula/zones/us-central1-a/instances/gcp-instance-01",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "gcp",
              "vpn-instance"
            ],
            "tags_fingerprint": "RF3KOXWjTSw=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.gcp-network-01",
            "google_compute_subnetwork.sn-gcp-uscentral1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "onprem-instance-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250513",
                    "labels": {
                      "vpn-instance": "onprem"
                    },
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/raghupothula/zones/us-central1-a/disks/onprem-instance-01"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/raghupothula/zones/us-central1-a/instances/onprem-instance-01",
            "instance_id": "4447187309470283927",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-2",
            "metadata_fingerprint": "-7Fq8U338Hg=",
            "name": "onprem-instance-01",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/raghupothula/global/networks/onprem-network-01",
                "network_ip": "10.20.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/raghupothula/regions/us-central1/subnetworks/sn-onprem-uscentral2",
                "subnetwork_project": "raghupothula"
              }
            ],
            "project": "raghupothula",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/raghupothula/zones/us-central1-a/instances/onprem-instance-01",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "gcp",
              "vpn-instance"
            ],
            "tags_fingerprint": "RF3KOXWjTSw=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.onprem-network-01",
            "google_compute_subnetwork.sn-onprem-uscentral2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "gcp-network-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/raghupothula/global/networks/gcp-network-02",
            "mtu": 1450,
            "name": "gcp-network-02",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "raghupothula",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/raghupothula/global/networks/gcp-network-02"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "onprem-network-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/raghupothula/global/networks/onprem-network-01",
            "mtu": 1450,
            "name": "onprem-network-01",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "raghupothula",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/raghupothula/global/networks/onprem-network-01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "gcp-nw-router-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "CUSTOM",
                "advertised_ip_ranges": [
                  {
                    "description": "Custom advertised subnet",
                    "range": "10.20.0.0/24"
                  }
                ],
                "asn": 65001,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2025-05-26T03:45:54.109-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/raghupothula/regions/us-central1/routers/gcp-nw-router-01",
            "name": "gcp-nw-router-01",
            "network": "https://www.googleapis.com/compute/v1/projects/raghupothula/global/networks/gcp-network-02",
            "project": "raghupothula",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/raghupothula/regions/us-central1/routers/gcp-nw-router-01"
          },
          "dependencies": [
            "google_compute_network.gcp-network-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat-router-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2025-05-26T03:45:54.233-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/raghupothula/regions/us-central1/routers/nat-router-02",
            "name": "nat-router-02",
            "network": "https://www.googleapis.com/compute/v1/projects/raghupothula/global/networks/onprem-network-01",
            "project": "raghupothula",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/raghupothula/regions/us-central1/routers/nat-router-02"
          },
          "dependencies": [
            "google_compute_network.onprem-network-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "onprem-nw-router-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 65002,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2025-05-26T03:45:54.459-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/raghupothula/regions/us-central1/routers/on-prem-nw-router-01",
            "name": "on-prem-nw-router-01",
            "network": "https://www.googleapis.com/compute/v1/projects/raghupothula/global/networks/onprem-network-01",
            "project": "raghupothula",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/raghupothula/regions/us-central1/routers/on-prem-nw-router-01"
          },
          "dependencies": [
            "google_compute_network.onprem-network-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "gcp-nat-gw-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "raghupothula/us-central1/gcp-nw-router-01/gcp-nat-gw-01",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "gcp-nat-gw-01",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "raghupothula",
            "region": "us-central1",
            "router": "gcp-nw-router-01",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "null_resource.previous",
            "time_sleep.wait_60_seconds"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat-gw-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "raghupothula/us-central1/nat-router-02/nat-gw-01",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat-gw-01",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "raghupothula",
            "region": "us-central1",
            "router": "nat-router-02",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "null_resource.previous",
            "time_sleep.wait_60_seconds"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "sn-02-gcp-uscentral1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-26T03:57:29.826-07:00",
            "gateway_address": "10.20.0.1",
            "id": "projects/raghupothula/regions/us-central1/subnetworks/sn-02-gcp-uscentral1",
            "ip_cidr_range": "10.20.0.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "sn-02-gcp-uscentral1",
            "network": "https://www.googleapis.com/compute/v1/projects/raghupothula/global/networks/gcp-network-02",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "raghupothula",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/raghupothula/regions/us-central1/subnetworks/sn-02-gcp-uscentral1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.gcp-network-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "sn-gcp-uscentral1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-26T03:45:54.330-07:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/raghupothula/regions/us-central1/subnetworks/sn-gcp-uscentral1",
            "ip_cidr_range": "10.10.0.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "sn-gcp-uscentral1",
            "network": "https://www.googleapis.com/compute/v1/projects/raghupothula/global/networks/gcp-network-02",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "raghupothula",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/raghupothula/regions/us-central1/subnetworks/sn-gcp-uscentral1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.gcp-network-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "sn-onprem-uscentral1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-26T03:46:05.127-07:00",
            "gateway_address": "192.168.0.1",
            "id": "projects/raghupothula/regions/us-central1/subnetworks/sn-onprem-uscentral1",
            "ip_cidr_range": "192.168.0.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "sn-onprem-uscentral1",
            "network": "https://www.googleapis.com/compute/v1/projects/raghupothula/global/networks/onprem-network-01",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "raghupothula",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/raghupothula/regions/us-central1/subnetworks/sn-onprem-uscentral1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.onprem-network-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "sn-onprem-uscentral2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-26T03:45:54.329-07:00",
            "gateway_address": "10.20.0.1",
            "id": "projects/raghupothula/regions/us-central1/subnetworks/sn-onprem-uscentral2",
            "ip_cidr_range": "10.20.0.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "sn-onprem-uscentral2",
            "network": "https://www.googleapis.com/compute/v1/projects/raghupothula/global/networks/onprem-network-01",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "raghupothula",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/raghupothula/regions/us-central1/subnetworks/sn-onprem-uscentral2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.onprem-network-01"
          ]
        }
      ]
    }
  ]
}